tests/expectations/compiler/function/record_in_conditional_return.out
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:11:47
     |
  11 |         let password_hash_from_input: field = Poseidon2::hash_to_field(password);
     |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:30:47
     |
  30 |         let password_hash_from_input: field = Poseidon2::hash_to_field(password);
     |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
